--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,4 @@
+form-control
 html,
 body {
   font-family: "Amazon Ember";
@@ -9,6 +10,21 @@ body {
 }
 
 
+::-webkit-scrollbar-track {
+  background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(66, 66, 66, 0.2);
+  border: 0px;
+  background-clip: padding-box;
+  border-radius: 5px;
+}
 
 nav {
   background-color: #232f3e;
@@ -61,7 +77,7 @@ nav {
   font-size: 0.9rem;
 }
 
-/* Home page */
+
 #products_heading {
   margin-top: 1.8rem;
 }
@@ -109,7 +125,7 @@ nav {
   flex-direction: column;
 }
 
-/* Footer */
+
 footer {
   margin-top: auto;
   color: grey;
@@ -118,6 +134,67 @@ footer {
 }
 
 
+#product_id {
+  color: grey;
+  font-size: 0.8rem;
+}
+
+#product_price {
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+#cart_btn,
+#review_btn {
+  border-radius: 2rem;
+  background-color: #fa9c23;
+  border: none;
+  padding: 0.5rem 2rem;
+}
+
+#product_seller {
+  color: grey;
+  font-size: 0.9rem;
+}
+
+#stock_status {
+  font-size: 1.1rem;
+  font-weight: bold;
+  margin-left: 0.3rem;
+}
+
+.redColor {
+  color: red;
+}
+
+.greenColor {
+  color: green;
+}
+
+#product_image {
+  margin-top: 9rem;
+}
+
+.loader {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20%;
+  width: 80px;
+  height: 80px;
+  padding-left: 0;
+}
+.loader:after {
+  content: " ";
+  display: block;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 6px solid #fa9c23;
+  border-color: #fa9c23 transparent;
+  animation: lds-dual-ring 1.2s linear infinite;
+}
 
 @keyframes lds-dual-ring {
   0% {
@@ -165,11 +242,7 @@ footer {
   width: 2.2rem;
 }
 
-
-
-
-
-
-
-
-
+.form-control:disabled,
+.form-control[readonly] {
+  background-color: white;
+}
